--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
 
   "dependencies": {
-    "underscore": "1.4.2"
+    "underscore": "1.4.2",
+    "slugifier": "0.1.x"
   },
 
   "engines": {
